After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721103 - test-effect-switch errors out with not-negotiated after a while
test-effect-switch errors out with not-negotiated after a while
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-26 22:56 UTC by Tim-Philipp Müller
Modified: 2013-12-30 18:50 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim-Philipp Müller 2013-12-26 22:56:00 UTC
This used to work just fine, so I think it's a regression.
Comment 1 Sebastian Dröge (slomo) 2013-12-30 18:26:39 UTC
I can confirm this, happens sometimes. Sometimes fast, sometimes after 10 minutes :) Is independent of the switch to an IDLE probe for the outer probe.
Comment 2 Sebastian Dröge (slomo) 2013-12-30 18:50:08 UTC
commit eff7866dd01207930c2af7365e8f7f9e0a3850c9
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Dec 30 19:48:29 2013 +0100

    videotestsrc: Always set pixel-aspect-ratio and interlace-mode in the fixed caps
    
    Otherwise our caps will not be compatible with elements that require a
    1/1 pixel-aspect-ratio or progressive video.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=721103