videotestsrc: Always set pixel-aspect-ratio and interlace-mode in the fixed caps

Otherwise our caps will not be compatible with elements that require a
1/1 pixel-aspect-ratio or progressive video.

https://bugzilla.gnome.org/show_bug.cgi?id=721103